# Forest

./: Cargo.toml
src/: main.rs
src/graph/: mod.rs
src/graph/d2/: colors.rs  common.rs  explicit.rs  implicit.rs  main.rs  mod.rs  parametric.rs  shader.wgsl
src/graph/d3/: camera.rs  implicit_data.rs  implicit_surface.rs  mesh.rs  mod.rs  parametric_curve.rs  shader.wgsl
src/graph/style/: colors.rs
src/math_forest/: mod.rs
src/math_forest/algebra/: mod.rs
src/math_forest/algebra/complex/: complex.rs  d_complex.rs  mod.rs  q_complex.rs  t_complex.rs
src/math_forest/algebra/fertile/: d_num.rs  mod.rs  q_num.rs  t_num.rs
src/math_forest/algebra/linear/: matrix2x2.rs  matrix3x3.rs  matrix4x4.rs
src/math_forest/algebra/solver/: linear.rs  mod.rs  nt.rs  polynomial.rs  trigonometric.rs
src/math_forest/geometry/d2/: mod.rs
src/math_forest/geometry/d2/conic/: circle.rs  conic.rs  ellipse.rs  h_line.rs  hyperbola.rs  mod.rs  parabola.rs  wipkyy.rs  x_line.rs
src/math_forest/geometry/d2/fertile/: d_point.rs  d_x_line.rs  mod.rs  q_point.rs
src/math_forest/geometry/d2/intersection/: line520.rs  mod.rs
src/math_forest/geometry/d2/linear/: line.rs  mod.rs  vec2.rs
src/math_forest/geometry/d2/special/: hyperelliptic.rs  mod.rs
src/math_forest/geometry/d3/: mod.rs
src/math_forest/geometry/d3/linear/: line3.rs  mod.rs  tetrahedron.rs  tril.rs  vec3.rs
src/math_forest/geometry/d3/surface/: cone.rs  cone_elliptical.rs  cylinder.rs  cylinder_hyperbolic.rs  hyperboloid_dual.rs  hyperboloid_single.rs  mod.rs  paraboloid.rs  paraboloid_elliptic.rs  paraboloid_hyperbolic.rs  sphere_elliptical.rs
src/math_forest/statistics/: random.rs
src/pakoo/: compiler.rs  core.rs  env.rs  math_data.rs  mod.rs  op.rs  rpn.rs  slice.rs  symbol_table.rs  token.rs
src/test/: g23_test.rs  giac.rs  mod.rs  nse.rs
