[package]
name = "Forest"
version = "0.1.0"
edition = "2024"

[dependencies]
# winit: 窗口创建和事件处理
# Winit 是一个跨平台的窗口管理库，专门为 Rust 语言设计。
# 它提供了统一的接口来创建和管理操作系统窗口，处理用户输入事件，是构建图形应用程序的基础。
winit = "0.30.12"


# wgpu: 核心图形 API
# wgpu 是一个跨平台的图形 API 库，专为 Rust 语言设计。
# 它提供了现代图形编程的统一接口，让开发者能够编写一次代码，在多个平台（包括桌面、移动端和 Web）上运行。
wgpu = "28.0.0"


# env_logger & log: 打印 GPU 错误信息
# env_logger = "0.11"

# 日志
# log = "0.4"

# pollster: 简单的异步执行器，用于启动 GPU 任务
pollster = "0.4.0"


# Rayon 是一个 Rust 的数据并行计算库，它能让并行编程变得简单而安全。
# 它的核心理念是让普通的迭代器代码自动并行化，只需很小的改动。
rayon = "1.8"

# 用于数据对齐
bytemuck = { version = "1.14", features = ["derive"] }

# 用于 3D 数学
# Rust 图形学中最常用的数学库 glam。更安全、更快（利用 SIMD），且与 WGPU 配合完美。
glam = { version = "0.24", features = ["bytemuck"] }


# XCAS giac
# giacrs = "0.1.3"


# 随机
rand = "0.8.5"
rand_distr = "0.4"


chumsky = "1.0.0-alpha.8" # 推荐使用 1.0 alpha 或 0.12 (API 极其相似，以下代码基于 0.12/1.0-alpha 风格)


# 用于漂亮的报错打印（代码中即使不依赖它也能跑核心逻辑，但推荐加上）
ariadne = "0.3"

# 提升发布版性能
# [profile.release]
# opt-level = 3       # 最高优化等级 (默认就是3，写出来明确一下)
# lto = "fat"         # 开启全量链接时优化 (Link Time Optimization)，跨包优化代码，速度更快但编译变慢
# codegen-units = 1   # 降低并行编译单元数，虽然编译慢了，但生成的代码质量更高
# panic = 'abort'     # 发生 panic 时直接终止，减少错误处理的额外开销
# strip = true        # 移除符号表，减小二进制体积（不影响速度，但让程序更轻）



[profile.release]
# 1. 优化级别：3 是默认最高，s/z 针对体积，3 针对速度
opt-level = 3

# 2. 链接时优化 (LTO)：消除跨 crate 的冗余代码，极大提升性能
lto = "fat"

# 3. 代码单元 (Codegen Units)：减少并行编译单元以获得更好的全局优化
codegen-units = 1

# 4. 恐慌处理：直接中止而不是展开栈，减小体积并提升少许性能
panic = "abort"

# 5. 符号信息：移除调试符号以减小二进制体积
strip = true